# coralvid

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt  config.hpp.in  converter.cpp  converter.hpp  main.cpp  x264.hpp  yuyv_to_yuv420p.comp
tools/: glsl2str.py
